--- a/package.json
+++ b/package.json
@@ -49,14 +49,14 @@
     "bootstrap": "^5.1",
     "exec-bin": "^1.0.0",
     "flexsearch": "^0.8.205",
-    "hugo-installer": "^4.0",
+    "hugo-installer": "^4.0.1",
     "postcss": "^8.5",
     "postcss-cli": "^9.1",
     "purgecss-whitelister": "^2.4"
   },
   "devDependencies": {
     "eslint": "^8.57",
-    "markdownlint-cli2": "^0.4.0",
+    "markdownlint-cli2": "^0.18.1",
     "shx": "^0.4",
     "stylelint": "^14.8",
     "stylelint-config-standard-scss": "^3.0",
@@ -64,5 +64,8 @@
   },
   "otherDependencies": {
     "hugo": "0.148.1"
+  },
+  "overrides": {
+    "semver": "^7.7.2"
   }
 }
